--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-12 Riccardo Mottola <rm@gnu.org>
+
+	*  FSNode/FSNodeRep.m
+	Quick security fix.
+
 2010-12-24 Riccardo Mottola
 
 	* FSNode/FSNodeRepIcons.m
